# ChangeLog for x11-apps/xfsinfo
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.3 2005/09/09 07:07:27 spyderous Exp $

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.

  08 Aug 2005; Ferris McCormick <fmccor@gentoo.org> xfsinfo-0.99.0.ebuild:
  Add ~sparc keyword (Modular X testing).

*xfsinfo-0.99.0 (08 Aug 2005)

  08 Aug 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xfsinfo-0.99.0.ebuild:
  Initial commit for modular X.
