@@ -1,0 +1,1 @@
+MD5 735d2b3c58993dab51af44b99c428453 xfsinfo-0.99.1.tar.bz2 72490
