@@ -1,0 +1,14 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/xfsinfo-0.99.1.ebuild,v 1.1 2005/10/20 00:45:23 spyderous Exp $
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="X.Org xfsinfo application"
+KEYWORDS="~mips ~sparc ~x86"
+RDEPEND="x11-libs/libX11
+	x11-libs/libFS"
+DEPEND="${RDEPEND}"
