@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xfsinfo
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.3 2005/09/09 07:07:27 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfsinfo/Attic/ChangeLog,v 1.4 2005/10/20 00:45:23 spyderous Exp $
+
+*xfsinfo-0.99.1 (20 Oct 2005)
+
+  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  +xfsinfo-0.99.1.ebuild:
+  Bump for 7.0 RC1.
 
   09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
   Add metadata.
